    # do stuff
  end

* Changed XML::Error exception objects to return copies of nodes that
  cause parse errors instead of the original node.  This prevents
  segmentation faults when the error is reraised.

* Added XML::Reader#node method.

* Fixed compile errors on OS X which uses an older version of libxml.

* Fixed memory leak when performing XPath searches.

* Fixed rdocs.


== 0.9.7 / 2008-12-08 Charlie Savage

* Added SAX2 support.  SAX handlers now define two new callbacks,
  on_start_element_ns and on_end_element_ns methods.  These
  new callbacks support namespaces, making them superior to the older
  callbacks on_start_element and on_end_element methods.  The old callbacks
  are still supported, but may be deprecated in the future depending
  on community feedback.

* Added SAX support for libxml's structured error handling.
  That menas sax handlers now define a new callback, on_error,
  which takes one parameter, an instance of XML::Error.  The older
  on_parser_error, on_parser_warning and on_parser_fatal_error
  callbacks are no longer suported so you must port your code.
  Note that the older callbacks took one string parameter, instead of
  an XML::Error object.

* Experimental work-around for libxml error handling bug - see
  http://mail.gnome.org/archives/xml/2008-December/msg00014.html
  for more information.

* Fix compilation bugs on Solaris.

* Fix Rdoc compilation bug.


== 0.9.6 / 2008-12-08 Charlie Savage

* Refactored namespace handling.  The existing, and inconsistent,
  namespace methods defined on XML::Node have been deprecated.  
  They have been replaced by a the new XML::Namespaces class.
  Use this class to inspect a node's namespace, its default
  namespace, its namespace definitions and which namespaces
  are in scope.  It can be accessed via the the
  XML::Node#namespaces method.

* Rationalized XML::Document#save, XML::Document#to_s and
  XML::Node#to_s to take an optional hash table of parameters 